namespace java cn.com.howell.api.req.base
struct BaseReq {
1: required string keep;
2: required string ip;
}